Fixed issues, added a lot of exceptions